fix gap

--- a/main-app/src/app/modules/calculate-values/components/calculate-values-form/calculate-values-form.component.less
+++ b/main-app/src/app/modules/calculate-values/components/calculate-values-form/calculate-values-form.component.less
@@ -34,7 +34,7 @@
 
   &-parameters {
     display: flex;
-    column-gap: 2rem;
+    column-gap: 34px;
     width: 100%;
 
     .description-span {
